fixed tiny bug of display of scrollbar.

--- a/CapsLock/src/capslock/MainForm.css
+++ b/CapsLock/src/capslock/MainForm.css
@@ -1,6 +1,7 @@
 #LeftScrollPane{
     -fx-focus-color: -fx-control-inner-background;
     -fx-faint-focus-color: -fx-control-inner-background;
+    -fx-background-color: gray;
     -fx-padding: 0;
 }
 
